Fix port forward wrapping (#1758)

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -508,6 +508,10 @@ label.switch
     display: flex;
     flex: 1 0 0%;
 }
+#ctrl-modal .forward.adr > div:first-child
+{
+    flex-wrap: wrap;
+}
 #ctrl-modal .adr > :last-child
 {
     width: 24px;
